--- a/swifty_companion/CustomProjectCell.xib
+++ b/swifty_companion/CustomProjectCell.xib
@@ -2,7 +2,6 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -17,7 +16,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="W5X-Zp-GzW">
+                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="749" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="W5X-Zp-GzW">
                         <rect key="frame" x="16" y="11.5" width="42" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
@@ -34,6 +33,7 @@
                     <constraint firstAttribute="trailing" secondItem="4cm-WF-XaN" secondAttribute="trailing" constant="16" id="389-iP-FRW"/>
                     <constraint firstItem="4cm-WF-XaN" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="97i-34-zYU"/>
                     <constraint firstItem="W5X-Zp-GzW" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="NWn-Ee-C7K"/>
+                    <constraint firstItem="4cm-WF-XaN" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="W5X-Zp-GzW" secondAttribute="trailing" constant="16" id="Wiu-1r-Km2"/>
                     <constraint firstItem="W5X-Zp-GzW" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="csC-xU-qge"/>
                 </constraints>
             </tableViewCellContentView>
